[gd_scene load_steps=22 format=3 uid="uid://c2tw10y1gr3nk"]

[ext_resource type="Script" uid="uid://os7kd1lq7h1q" path="res://Scenes/Game Manager.gd" id="1_jjvhh"]
[ext_resource type="PackedScene" uid="uid://bd2oqnbk4qn8w" path="res://Scenes/UI/Stat Meter/Stat Meter.tscn" id="3_kry3j"]
[ext_resource type="PackedScene" uid="uid://b03on4vwuolop" path="res://Scenes/UI/Use Item Button/UseItemButton.tscn" id="4_jjvhh"]
[ext_resource type="Texture2D" uid="uid://h5rb1rdf16rg" path="res://Assets/Sprites/Objects/Heart.png" id="5_21xkr"]
[ext_resource type="Texture2D" uid="uid://ikycjp7k08ot" path="res://Assets/Sprites/Objects/Pixel Food/Hunger.png" id="6_6bp64"]
[ext_resource type="Texture2D" uid="uid://bw0trg16x2wti" path="res://Assets/Sprites/Objects/Pixel Food/coin.png" id="7_6bp64"]
[ext_resource type="PackedScene" uid="uid://curv1o8ebr6ih" path="res://Scenes/Pet/Pet.tscn" id="9_ynf5e"]
[ext_resource type="Texture2D" uid="uid://c7okl13l71ojw" path="res://Assets/Sprites/Rooms/example room.png" id="10_hptm8"]
[ext_resource type="PackedScene" uid="uid://lrqxim11q33e" path="res://Scenes/UI/Window Drag/WindowDrag.tscn" id="11_d1ilt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_344ge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ynf5e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hptm8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d1ilt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6iyac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fdnlq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkdf5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wsu2k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k12tt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h1bgf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3802"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_d1ilt"]
vertices = PackedVector2Array(1008.23, 419.992, 1131.67, 633.039, 20.5469, 635.953, 148.703, 419)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(143, 409, 1014, 410, 1149, 643, 3, 646)])

[node name="Main" type="Node2D" node_paths=PackedStringArray("hunger_timer", "hunger_timer_pbar", "hunger_timer_label", "happiness_timer", "happiness_timer_pbar", "happiness_timer_label", "coins_label")]
script = ExtResource("1_jjvhh")
hunger_timer = NodePath("Stats & Timers/Hunger Timer/Hunger Timer")
hunger_timer_pbar = NodePath("Stats & Timers/Hunger Timer/Hunger Timer Progress Bar")
hunger_timer_label = NodePath("Stats & Timers/Hunger Timer/hunger timer label")
happiness_timer = NodePath("Stats & Timers/Happiness Timer/Happiness Timer")
happiness_timer_pbar = NodePath("Stats & Timers/Happiness Timer/Happiness Timer Progress Bar")
happiness_timer_label = NodePath("Stats & Timers/Happiness Timer/Label2")
coins_label = NodePath("Coins/Coins label")

[node name="Buttons" type="Node2D" parent="."]
visible = false

[node name="Buy Happiness Button" parent="Buttons" instance=ExtResource("4_jjvhh")]
offset_left = 187.0
offset_top = 579.0
offset_right = 187.4
offset_bottom = 614.968
type = 1
value = 1
cost = 10
metadata/_edit_use_anchors_ = true

[node name="TextureRect" parent="Buttons/Buy Happiness Button" index="0"]
texture = ExtResource("5_21xkr")

[node name="Buy Food Button" parent="Buttons" instance=ExtResource("4_jjvhh")]
offset_left = 126.0
offset_top = 579.0
offset_right = 126.4
offset_bottom = 614.968
value = 1
cost = 10
metadata/_edit_use_anchors_ = true

[node name="TextureRect" parent="Buttons/Buy Food Button" index="0"]
offset_left = 9.0
offset_top = 8.0
offset_right = 49.0
offset_bottom = 48.0
texture = ExtResource("6_6bp64")

[node name="Remove Happiness Button" parent="Buttons" instance=ExtResource("4_jjvhh")]
visible = false
modulate = Color(1, 0.465563, 0.556381, 1)
offset_left = 711.0
offset_top = 547.0
offset_right = 767.0
offset_bottom = 603.0
type = 1
value = -1

[node name="TextureRect" parent="Buttons/Remove Happiness Button" index="0"]
texture = ExtResource("5_21xkr")

[node name="Remove Food Button" parent="Buttons" instance=ExtResource("4_jjvhh")]
visible = false
modulate = Color(1, 0.465563, 0.556381, 1)
offset_left = 382.0
offset_top = 547.0
offset_right = 438.0
offset_bottom = 603.0
value = -1

[node name="TextureRect" parent="Buttons/Remove Food Button" index="0"]
texture = ExtResource("6_6bp64")

[node name="Stats & Timers" type="Node2D" parent="."]

[node name="Hunger Progress Bar" parent="Stats & Timers" instance=ExtResource("3_kry3j")]
offset_left = 16.0
offset_top = 13.5
offset_right = 176.0
offset_bottom = 45.5
scale = Vector2(2, 2)
style = 0

[node name="Happiness Progress Bar" parent="Stats & Timers" instance=ExtResource("3_kry3j")]
offset_left = 16.0
offset_top = 85.0
offset_right = 176.0
offset_bottom = 117.0
scale = Vector2(2, 2)
theme_type_variation = &""
type = 1
style = 0

[node name="Hunger Timer" type="Node2D" parent="Stats & Timers"]

[node name="Hunger Timer" type="Timer" parent="Stats & Timers/Hunger Timer"]
wait_time = 30.0

[node name="Hunger Timer Progress Bar" type="ProgressBar" parent="Stats & Timers/Hunger Timer"]
offset_left = 10.0
offset_top = 440.0
offset_right = 40.0
offset_bottom = 640.0
fill_mode = 3
show_percentage = false

[node name="Hunger" type="Sprite2D" parent="Stats & Timers/Hunger Timer"]
position = Vector2(23, 423)
texture = ExtResource("6_6bp64")

[node name="hunger timer label" type="Label" parent="Stats & Timers/Hunger Timer"]
offset_left = 7.0
offset_top = 513.0
offset_right = 47.0
offset_bottom = 536.0
text = "0.00s"

[node name="Happiness Timer" type="Node2D" parent="Stats & Timers"]

[node name="Happiness Timer" type="Timer" parent="Stats & Timers/Happiness Timer"]
wait_time = 30.0

[node name="Happiness Timer Progress Bar" type="ProgressBar" parent="Stats & Timers/Happiness Timer"]
offset_left = 83.0
offset_top = 440.0
offset_right = 113.0
offset_bottom = 640.0
fill_mode = 3
show_percentage = false

[node name="Heart" type="Sprite2D" parent="Stats & Timers/Happiness Timer"]
position = Vector2(98, 423)
texture = ExtResource("5_21xkr")

[node name="Label2" type="Label" parent="Stats & Timers/Happiness Timer"]
offset_left = 81.0
offset_top = 513.0
offset_right = 121.0
offset_bottom = 536.0
text = "0.00s"

[node name="Coins" type="Node2D" parent="."]
visible = false

[node name="Coin Sprite" type="Sprite2D" parent="Coins"]
position = Vector2(1037, 52)
scale = Vector2(3.81354, 3.81354)
texture = ExtResource("7_6bp64")

[node name="Coins label" type="Label" parent="Coins"]
offset_left = 951.0
offset_top = 18.0
offset_right = 1065.0
offset_bottom = 155.0
scale = Vector2(0.483969, 0.483969)
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 2

[node name="Pet Button" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 463.0
offset_top = 388.0
offset_right = 663.0
offset_bottom = 588.0
mouse_filter = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_344ge")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ynf5e")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hptm8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_d1ilt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6iyac")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fdnlq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jkdf5")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wsu2k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k12tt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_h1bgf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b3802")

[node name="WindowDrag" parent="." instance=ExtResource("11_d1ilt")]
offset_left = 1100.0
offset_right = 1116.0
offset_bottom = 16.0
scale = Vector2(3.23784, 3.23784)

[node name="Pet" parent="." instance=ExtResource("9_ynf5e")]
position = Vector2(566, 563)
scale = Vector2(11, 11)

[node name="ExampleRoom" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(575, 323)
texture = ExtResource("10_hptm8")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_d1ilt")

[connection signal="timeout" from="Stats & Timers/Hunger Timer/Hunger Timer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="Stats & Timers/Hunger Timer/Hunger Timer" to="." method="_on_hunger_t_imer_timeout"]
[connection signal="timeout" from="Stats & Timers/Happiness Timer/Happiness Timer" to="." method="_on_happiness_timer_timeout"]
[connection signal="pressed" from="Pet Button" to="." method="_on_pet_button_pressed"]

[editable path="Buttons/Buy Happiness Button"]
[editable path="Buttons/Buy Food Button"]
[editable path="Buttons/Remove Happiness Button"]
[editable path="Buttons/Remove Food Button"]
